--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
         <!-- App files -->
         <script type="text/javascript" src="./app.js"></script>
+        <script type="text/javascript" src="./lib/controller/pageHeader/pageHeader.js"></script>
     </head>
     <body>
+        <ng-include src="'./lib/controller/pageHeader/pageHeader.html'"></ng-include>
     </body>
 </html>
